paymentエンドポイントの追加
