# internal/model/payments.go
@@ -1,0 +1,9 @@
+package model
+
+import "time"
+
+type Payment struct {
+	ID          int       `json:"id"`
+	Amount      int       `json:"amount"`
+	PaymentDate time.Time `json:"payment_date"`
+}
